--- a/resources/robots/WEB-INF/web.xml
+++ b/resources/robots/WEB-INF/web.xml
@@ -15,22 +15,25 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                      http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1"
-         metadata-complete="true">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
 
-    <display-name>Welcome to Tomcat</display-name>
+    <display-name>Hyrax Site Map Service</display-name>
     <description>
-        Welcome to Tomcat
+        This service provides a dynamic robots.txt response and site map services for Hyrax
     </description>
     <servlet>
         <servlet-name>site_map_service</servlet-name>
         <servlet-class>opendap.bes.BESSiteMapService</servlet-class>
-        <!--servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class -->
         <load-on-startup>1</load-on-startup>
+
+        <init-param>
+            <param-name>DapServiceContext</param-name>
+            <param-value>opendap</param-value>
+        </init-param>
+
     </servlet>
 
 
