--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,8 @@
 
 <project
         name="OPeNDAP Lightweight Front end Server (OLFS), part of the Hyrax project"
-        default="all" basedir=".">
+        default="all" basedir="."
+        xmlns:sonar="antlib:org.sonar.ant" >
 
     <!-- Global Properties for Java-OPeNDAP software development -->
 
@@ -921,6 +922,37 @@
         <delete file="${build.dist}/opendap.war"/>
         <delete file="${build.dist}/ROOT.war"/>
     </target>
+
+
+
+
+    <!--
+    SonarCloud build stuff
+    -->
+    <!-- Define the SonarQube global properties (the most usual way is to pass these properties via the command line) -->
+    <property name="sonar.host.url" value="https://sonarcloud.io" />
+    <property name="sonar.login" value="66f277d8ec0949b5ae994d79c3a3eea19f0be366" />
+
+    <!-- Define the SonarQube project properties -->
+    <property name="sonar.projectKey" value="66f277d8ec0949b5ae994d79c3a3eea19f0be366" />
+    <property name="sonar.projectName" value="OLFS SonarQube Scanner for Ant Usage" />
+    <property name="sonar.projectVersion" value="${OLFS_VERSION}" />
+    <property name="sonar.organization" value="opendap" />
+    <property name="sonar.sources" value="src" />
+    <property name="sonar.java.binaries" value="build" />
+    <property name="sonar.java.libraries" value="lib/*.jar" />
+
+    <!-- Define SonarQube Scanner for Ant Target -->
+    <target name="sonar">
+        <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+            <classpath path="sonar/sonarqube-ant-task-2.5.jar" />
+        </taskdef>
+        <!-- taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" / -->
+
+        <!-- Execute SonarQube Scanner for Ant Analysis -->
+        <sonar:sonar />
+    </target>
+
 
 </project>
 
