olfs: Fixed problem with .gitignore that was causing parts of the hyrax web application resources to be excluded from git management.

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ Makefile
 Makefile.in
 atlocal
 atconfig
-conf
+/conf
 aclocal.m4
 hyrax_tests/conf
 config.log
@@ -46,3 +46,4 @@ foo.*
 /.externalToolBuilders/
 /.settings/
 /bin/
+
