--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,6 @@ env:
 stages:
 - name: build
   if:  branch = master
-- name: test
-  if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
 
@@ -52,11 +50,8 @@ jobs:
   - stage: build
     script: 
     - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-
-  - stage: test
-    script: 
-    - ant check
-
+    # Tests are run by the default 'script'
+    
   - stage: scan
     addons: 
       sonarcloud: 
@@ -64,9 +59,9 @@ jobs:
     - ant server
     - ant sonar -Dsonar.login=$SONAR_LOGIN
 
-script:
-  # Empty script suppresses the default (ant test) which fails. We run the
-  # tests in a separate stage. See above.
+# Since there's no 'script', Travis will run the default script
+# 'ant test' after build and scan complete. I tried to work around
+# that, but couldn't sort it out. 
 
 # We could copy the logic in the bes or libdap travis.yml files to 
 # build and deploy a dist.
