--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ sudo: false
 language: java
 
 jdk:
-  - openjdk8
   - openjdk7
+  - openjdk8
 
 # whitelist
 branches:
@@ -39,8 +39,12 @@ env:
    # SONAR_LOGIN, made using "travis encrypt --org -r OPENDAP/olfs SONAR_LOGIN=335df..."
    - secure: "GW672d33rdWG40v8ve25p909qnejhqWGzoX7+IEflv9hMZ+8vDWArtFaxuILhu/QeJlLJgMCrNyWdhgpSuyEJS8/EQlOUXWZfZaSPBVriayd7OKLY5D35PKODFPXbZpJ1GOheMz3roQkg+IjQzgey/zOGu4KQB9FjtcqllFvy38="
 
+script: true
+
 stages:
 - name: build
+  if:  branch = master
+- name: test
   if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
@@ -48,9 +52,18 @@ stages:
 jobs:
   include:
   - stage: build
-    script: 
+    script:
+    - jdk_switcher use openjdk7
     - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    # Tests are run by the default 'script'
+    - jdk_switcher use openjdk8
+    - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+  - stage: test
+    script:
+    - jdk_switcher use openjdk7
+    - ant check
+    - jdk_switcher use openjdk8
+    - ant check
     
   - stage: scan
     addons: 
@@ -58,10 +71,3 @@ jobs:
     script:
     - ant server
     - ant sonar -Dsonar.login=$SONAR_LOGIN
-
-# Since there's no 'script', Travis will run the default script
-# 'ant test' after build and scan complete. I tried to work around
-# that, but couldn't sort it out. 
-
-# We could copy the logic in the bes or libdap travis.yml files to 
-# build and deploy a dist.
