--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,33 @@ env:
    # SONAR_LOGIN, made using "travis encrypt --org -r OPENDAP/olfs SONAR_LOGIN=335df..."
      - secure: "GW672d33rdWG40v8ve25p909qnejhqWGzoX7+IEflv9hMZ+8vDWArtFaxuILhu/QeJlLJgMCrNyWdhgpSuyEJS8/EQlOUXWZfZaSPBVriayd7OKLY5D35PKODFPXbZpJ1GOheMz3roQkg+IjQzgey/zOGu4KQB9FjtcqllFvy38="
 
-script: 
-  - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-  - ant check
-  - ant sonar -Dsonar.login=$SONAR_LOGIN
+script: true
+
+stages:
+- name: build
+  if:  branch = master
+- name: test
+  if:  branch = master
+- name: scan
+  if:  branch = master AND NOT type = pull_request
+
+jobs:
+  include:
+    - stage: build
+      jdk: openjdk7
+      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+    - jdk: openjdk8
+      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: test
+      jdk: openjdk7
+      script: ant check
+    - jdk: openjdk8
+      script: ant check
+    
+    - stage: scan
+      addons: 
+      sonarcloud: 
+      jdk: openjdk8
+      script: an sonar -Dsonar.login=$SONAR_LOGIN
+  
