--- a/.travis.yml
+++ b/.travis.yml
@@ -67,5 +67,7 @@ jobs:
       addons: 
         sonarcloud: 
       jdk: openjdk8
-      script: ant sonar -Dsonar.login=$SONAR_LOGIN
+      script:
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
+        - ant sonar -Dsonar.login=$SONAR_LOGIN
   
