Worked; added comments.
[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ sudo: false
 
 language: java
 
+# Drop this and use the jdk: ... lines in the jobs: secction below.
+# jhrg 3/19/19
+#
 # jdk:
 #  - openjdk7
 #  - openjdk8
