--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 # Initial Travic-CI control file. 6.11.15 jhrg
 # Added sonar scan 3.12.19 jhrg 
 
+dist: trusty
+
+
 # Use the docker container-based build systems
 sudo: false
 
