--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,7 @@ before_deploy:
 - ls -l ${TRAVIS_BUILD_DIR}/package/
 - git clone https://github.com/opendap/hyrax-docker 
 - ls -l hyrax-docker
+- cd hyrax-docker; git checkout snapshot;
 - docker build --build-arg RELEASE_DATE=`date +%s` -t opendap/olfs:snapshot hyrax-docker/hyrax-snapshot/olfs
 - docker images
 - echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
