--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ before_deploy:
 - git checkout snapshot;
 - ls -l
 - cd hyrax-snapshot 
-- docker build --build-arg RELEASE_DATE=`date +%s` -t opendap/olfs:snapshot olfs
+- docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
 - docker image ls -a
 - docker containers ls -a
 - echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
